plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.sonarqube' version '6.0.1.5171'
    id 'jacoco'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

sonarqube {
    properties {
        property "sonar.projectKey", "Chessplatform"
        property "sonar.projectName", "Chessplatform"
        property "sonar.host.url", System.getenv("SONAR_HOST_URL") ?: "http://localhost:9000"
        def sonarToken = '${SONAR_TOKEN}'
        property 'sonar.token', sonarToken
        property "sonar.login", System.getenv('SONAR_TOKEN')
        property "sonar.tests", "src/test/java"
        property "sonar.coverage.exclusions", """
      **/mapper/**,**/controller/**,**/domain/**,
      **/enums/**,**/persistence/**,**/exceptions/**,**/config/**
    """.trim()
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'mysql:mysql-connector-java:8.0.33'
    compileOnly 'org.projectlombok:lombok'
    implementation 'com.h2database:h2'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-core:5.0.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.0.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    implementation 'io.swagger:swagger-annotations:1.5.21'
    implementation 'io.swagger.core.v3:swagger-jaxrs2:2.1.9'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    testImplementation 'com.h2database:h2'
    implementation 'com.rometools:rome:1.18.0'
}

tasks.named('test') {
    useJUnitPlatform()
    systemProperty "spring.profiles.active", "test"
    systemProperty "jwt.secret", System.getenv("JWT_SECRET") ?: ""
}

tasks.jacocoTestReport {
    dependsOn tasks.test

    reports {
        xml.required.set(true)
        html.required.set(true)
    }
}

tasks.named('sonar') {
    dependsOn 'test', 'jacocoTestReport'
}

